...
        android:contentDescription="Upload Image"
        android:minWidth="60dp"
        android:minHeight="60dp"
        android:padding="15dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_upload"
        app:layout_constraintEnd_toStartOf="@+id/event_done_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/event_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_done"
        android:minWidth="60dp"
        android:minHeight="60dp"
...
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:paddingStart="16dp"
                        android:src="@drawable/location_icon" />

                    <EditText
                        android:id="@+id/add_event_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:gravity="center"
                        android:hint="Event Location"
                        android:textAlignment="center"
...
